k3s/cluster/infra/notifications/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: ntfy
spec:
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - name: http
      port: 80
      targetPort: http
